Updated with Vin's description

--- a/08_mongosite/templates/auth.html
+++ b/08_mongosite/templates/auth.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-  
+  Choose at least one type of pokemon to search for.
+  <br>
+  Choosing only one will show you all pokemon of that type.
+  <br>
+  Choosing two will show you all pokemon of both types.
   <form action="/results" method="GET">
     <select name="type_0">
       <option>Normal</option>
