--- a/08_mongosite/templates/home.html
+++ b/08_mongosite/templates/home.html
@@ -8,7 +8,12 @@
   
 </head>
 <body>
-  
+
+  This is a web app that shows you names of first gen pokemon by searching based on types.
+  <br>
+  Please enter a mongo ip address to begin.
+  <br>
+  <br>
   <form action="/auth" method="GET">
     IP Address: <input type="text" name="ip">
     <button type="submit">Submit</button>
